correct bags, form logic, correct data-center page

--- a/src/pug/0-0index.pug
+++ b/src/pug/0-0index.pug
@@ -15,7 +15,7 @@ block content
 		.box
 			.header-inner.header-inner_animate
 				.header-inner__title.header-inner__title_offset
-					h1.h1 Крупнейший в Беларуси сертифицированный дата-центр
+					h1.h1 Крупнейший в Беларуси сертифици&shy;рованный дата-центр
 					a(href="#").link-button Посмотреть услуги
 				.promo-reclame
 					.promo-reclame__item
