--- a/src/pug/1-4infrastructure.pug
+++ b/src/pug/1-4infrastructure.pug
@@ -26,20 +26,23 @@ block content
 							+icon('arrow_down')
 					+link-navigation(['Команда', 'Документация', 'Сертификаты', 'Инфраструктура', 'Новости', 'Галерея'])
 			.content-inner
-				.content-inner-group.fade-down
+				.infrastructure-links
 					+infrastructure-links-item(['Система электроснабжения', 'Система кондиционирования', 'Система пожаротушения ', 'Телекоммуникации', 'Комплексная безопасность'])
-				.content-inner-group.fade-down
-					h2.h2.content-inner__title ЦОД обеспечен двумя независимыми оптическими подключениями, что гарантирует доступность каналов связи
+				.content-area
+					h2 ЦОД обеспечен двумя независимыми оптическими подключениями, что гарантирует доступность каналов связи
 					.datacenter-characteristics.datacenter-characteristics_data
 						+datacenter-characteristics('99,982%', 'Уровень доступности сервисов')
 						+datacenter-characteristics('35000 м²', 'Общая проектная площадь')
 						+datacenter-characteristics('6620 м²', 'Площадь зданий и сооружений')
-					p.text-primary Современные требования к ИТ-инфраструктуре предполагают максимальную доступность данных для операционной деятельности любого бизнеса практически в любой точке мира, что обусловлено виртуализацией ИТ-решений, которая многократно повышает скорость, масштаб и экономическую выгоду для предприятий.
-					h3.h3 Современные требования к ИТ-инфраструктуре предполагают максимальную доступность данных
-					p.text-primary Современные требования к ИТ-инфраструктуре предполагают максимальную доступность данных для операционной деятельности любого бизнеса практически в любой точке мира, что обусловлено виртуализацией ИТ-решений, которая многократно повышает скорость, масштаб и экономическую выгоду для предприятий.
-				.content-inner-group.fade-down
-					h3.h3 Результат
-						+link-more('Смотреть все фото','')
+					p Современные требования к ИТ-инфраструктуре предполагают максимальную доступность данных для операционной деятельности любого бизнеса практически в любой точке мира, что обусловлено виртуализацией ИТ-решений, которая многократно повышает скорость, масштаб и экономическую выгоду для предприятий.
+					.youtube(data-embed='OiLdgNA6hlM')
+						.play-button
+							.play-button-icon
+					h3 Современные требования к ИТ-инфраструктуре предполагают максимальную доступность данных
+					p Современные требования к ИТ-инфраструктуре предполагают максимальную доступность данных для операционной деятельности любого бизнеса практически в любой точке мира, что обусловлено виртуализацией ИТ-решений, которая многократно повышает скорость, масштаб и экономическую выгоду для предприятий.
+					hr
+					h3 Результат
+						+link-more('Смотреть все фото','title-link')
 					.inner-slider
 						.inner-slider-init
 							.inner-slider__slide
@@ -62,20 +65,19 @@ block content
 							button(type="button").inner-slider__next
 								+icon('arrow')
 
-
-					p.text-primary Современные требования к ИТ-инфраструктуре предполагают максимальную доступность данных для операционной деятельности любого бизнеса практически в любой точке мира, что обусловлено виртуализацией ИТ-решений, которая многократно повышает скорость, масштаб и экономическую выгоду для предприятий.
-				.data-center-details.fade-down
-					h3.h3 Дата-центры подключены к точкам обмена трафиком MSK-IX, DATA-IX. Точки присутствия на ММТС-9, ММТС-10. Собственная оптоволоконная сеть
-					ul.data-center-details__list
-						li.data-center-details__item.text-primary Все активное оборудование дублируется по принципу N+1
-						li.data-center-details__item.text-primary Энергосистема организована на базе двух независимых вводов как со стороны городских сетей, так и оборудования клиента
-						li.data-center-details__item.text-primary Климатическое оборудование также построено на базе резервирования
-						li.data-center-details__item.text-primary При проведении профилактических работ функционирование ЦОД функционирует в обычном режиме не страдает
-						li.data-center-details__item.text-primary ЦОД обеспечен двумя независимыми оптическими подключениями, что гарантирует доступность каналов связи
-				.content-inner-group.fade-down
-					h3.h3.content-inner-item__title Система электроснабжения
+					p Современные требования к ИТ-инфраструктуре предполагают максимальную доступность данных для операционной деятельности любого бизнеса практически в любой точке мира, что обусловлено виртуализацией ИТ-решений, которая многократно повышает скорость, масштаб и экономическую выгоду для предприятий.
+					.bg-gray
+						h3 Дата-центры подключены к точкам обмена трафиком MSK-IX, DATA-IX. Точки присутствия на ММТС-9, ММТС-10. Собственная оптоволоконная сеть
+						ul
+							li Все активное оборудование дублируется по принципу N+1
+							li Энергосистема организована на базе двух независимых вводов как со стороны городских сетей, так и оборудования клиента
+							li Климатическое оборудование также построено на базе резервирования
+							li При проведении профилактических работ функционирование ЦОД функционирует в обычном режиме не страдает
+							li ЦОД обеспечен двумя независимыми оптическими подключениями, что гарантирует доступность каналов связи
+					
+					h3 Система электроснабжения
 					.parameters-table
-						dl.data-parameters.data-parameters_no-mw
+						dl.data-parameters
 							dt.data-parameters__title.text-small Общая электрическая мощность
 							dd.data-parameters__desc.text-small 8 МВт
 							dt.data-parameters__title.text-small Электрическая мощность модуля
@@ -84,7 +86,7 @@ block content
 							dd.data-parameters__desc.text-small 2 акт. линии по 10 кВ
 							dt.data-parameters__title.text-small Гарантированное электроснабжение
 							dd.data-parameters__desc.text-small 2N
-						dl.data-parameters.data-parameters_no-mw
+						dl.data-parameters
 							dt.data-parameters__title.text-small Дизель-генераторные установки
 							dd.data-parameters__desc.text-small N+1
 							dt.data-parameters__title.text-small Внешние топливохранилища
