--- a/src/pug/etalon.pug
+++ b/src/pug/etalon.pug
@@ -30,19 +30,21 @@ block content
 						+datacenter-characteristics('6620 м²', 'Площадь зданий и сооружений')
 					p Современные требования к ИТ-инфраструктуре предполагают максимальную доступность данных для операционной деятельности любого бизнеса практически в любой точке мира, что обусловлено виртуализацией ИТ-решений, которая многократно повышает скорость, масштаб и экономическую выгоду для предприятий.	
 					.youtube(data-embed='OiLdgNA6hlM')
-						.play-button +
+						.play-button
+							.play-button-icon
 					h3 Современные требования к ИТ-инфраструктуре предполагают максимальную доступность данных
-					p Современные требования к ИТ-инфраструктуре
+					p Современные требования к ИТ-инфраструктуре 
 						sup предполагают 
 						|максимальную 
 						b доступность данных 
 						|для операционной 
 						sub деятельности 
 						|любого бизнеса практически 
-						del 
-						|в любой точке мира, что обусловлено виртуализацией ИТ-решений, которая многократно повышает скорость, масштаб и экономическую выгоду для предприятий.
+						del в любой точке мира
+						|, что обусловлено виртуализацией ИТ-решений, которая многократно повышает скорость, масштаб и экономическую выгоду для предприятий.
 					hr
 					h3 Результат
+						+link-more('Смотреть все фото','title-link')
 					.inner-slider
 						.inner-slider-init
 							.inner-slider__slide
