--- a/src/pug/site-map.pug
+++ b/src/pug/site-map.pug
@@ -20,7 +20,7 @@ block content
 		.content-wrap
 			aside.side-bar.js-stick-parent
 				.side-bar-banner.js-stick
-					+link-banner('Бесплатный звонок в сети velcom', 'Заказать звонок', 'side-banner-3.jpg')
+					+link-banner('Бесплатный звонок в сети velcom', 'Заказать звонок', 'side-banner-3.jpg', '411')
 			.content-inner
 				.site-map
 					.site-map-wrap 
