--- a/src/sass/screen.sass
+++ b/src/sass/screen.sass
@@ -3,6 +3,7 @@
 @import lib/reset
 @import lib/variables
 @import lib/slick
+@import lib/select2
 //@import lib/root
 @import repeat_block
 @import main
