--- a/src/pug/includes/_modals.pug
+++ b/src/pug/includes/_modals.pug
@@ -72,10 +72,6 @@ include _mixins.pug
 					.form-block__head
 						.h2.form-block__title Получить консультацию
 					.form-block__body
-						.text-small Укажите минимум данных и мы перезвоним вам в течение 
-							strong 30 минут в рабочее время (с 8:30 до 17:30), 
-							| чтобы уточнить требования по телефону
-						hr.form-content-devider
 						.form-content
 							.form-content-head Контактные данные
 							.input-row
@@ -99,16 +95,22 @@ include _mixins.pug
 											id="clieentEmail"
 										)
 										label.input-label(for="clieentEmail") Email*
-								.input-item.w50
+								.input-item.w50.telwrapper
+									.input-wrapper
+										select.input-main.js-select.countryTels(name='telCountry',id='telCountry')
+											option(value="+375", data-img='img/png/blr.png') +375
+											option(value="+776", data-img='img/png/blr.png') +776
+											option(value="8 099", data-img='img/png/blr.png') 8 099
+										label.input-label.fixed(for="clieentPhone") Регион
 									.input-wrapper
 										input.input-main(
-											type="phone",
+											type="tel",
 											data-validation="custom",
 											data-validation-regexp="^[-0-9()+ ]+$",
 											data-validation-error-msg="Введите корректный номер телефона",
 											name="clieentPhone",
 											id="clieentPhone")
-										label.input-label(for="clieentPhone") Телефон*
+										label.input-label.sm(for="clieentPhone") Контактный телефон
 						hr.form-content-devider
 						.form-content
 							.form-content-head Тема обращения
@@ -117,89 +119,40 @@ include _mixins.pug
 									.radio-wrapper
 										input.radio-input(
 											type="radio", 
-											name="radio-group", 
-											id="radio-1")
-										label.radio-label(for="radio-1", data-validation="required")
+											name="radio-group1", 
+											id="radio-11", data-validation="required",
+											data-display-trigger='theme-question',
+											data-display-trigger-value='1',
+											checked)
+										label.radio-label(for="radio-11")
 											.radio-label__custom
 												.radio-label__check
 											.radio-label__text Вопрос по услугам
 									.radio-wrapper
 										input.radio-input(
 											type="radio", 
-											name="radio-group", 
-											id="radio-2")
-										label.radio-label(for="radio-2", data-validation="required")
+											name="radio-group1", 
+											id="radio-21",
+											data-display-trigger='theme-question',
+											data-display-trigger-value='2')
+										label.radio-label(for="radio-21")
 											.radio-label__custom
 												.radio-label__check
 											.radio-label__text Общие вопросы
 									.radio-wrapper
 										input.radio-input(
 											type="radio", 
-											name="radio-group", 
-											id="radio-3")
-										label.radio-label(for="radio-3", data-validation="required")
+											name="radio-group1", 
+											id="radio-31",
+											data-display-trigger='theme-question',
+											data-display-trigger-value='3')
+										label.radio-label(for="radio-31")
 											.radio-label__custom
 												.radio-label__check
 											.radio-label__text Регистрация инцидента
-								.input-item.w100
-									.input-wrapper
-										.select-check.js-select-custom
-											.select-carret
-												+icon('arrow_down')
-											button.selects.dropdown(data-placeholder='Категория вопроса *')
-												span.btn-text Категория вопроса *
-											.dropdown-target
-												.dropdown-inner
-													.dropdown-content
-														.select-u-body.select-list
-															label.option
-																input(
-																	type='radio',
-																	name='yeats',
-																	value='Co-location',
-																	data-validation="required"
-																	)
-																span Co-location
-															label.option
-																input(
-																	type='radio',
-																	name='yeats',
-																	value='Выделенные сервера',
-																	data-validation="required"
-																	)
-																span Выделенные сервера
-															label.option
-																input(
-																	type='radio',
-																	name='yeats',
-																	value='Категория вопроса 3',
-																	data-validation="required"
-																	)
-																span Категория вопроса 3
-															label.option
-																input(
-																	type='radio',
-																	name='yeats',
-																	value='IaaS',
-																	data-validation="required"
-																	)
-																span IaaS
-															label.option
-																input(
-																	type='radio',
-																	name='yeats',
-																	value='Другое',
-																	data-validation="required"
-																	)
-																span Другое
-								.input-item.w100(style="display: none;")
-									.input-wrapper
-										textarea.input-main(
-											type="text",
-											rows="9",
-											data-validation="length",
-											data-validation-length="50-200")
-										label.input-label Вопрос *
+							/// контейнер для блоков
+							.form-content(data-display-container='theme-question')
+								
 					.form-block__footer
 						.input-row
 							.input-item.w100
@@ -216,7 +169,65 @@ include _mixins.pug
 						type="submit",
 						data-target="btn-submit",
 						value="Отправить") Отправить
-
+			// сюда кладем блоки, которые надо вставить
+			.form-appended-els(style='display: none;')
+				/// блок 1
+				.input-row(data-display-target='theme-question',data-display-trigger-value='1')
+					.text-small Укажите минимум данных и мы перезвоним вам в течение 
+						strong 30 минут в рабочее время (с 8:30 до 17:30), 
+						| чтобы уточнить требования по телефону
+					hr.form-content-devider
+					.input-item.w100
+						.input-wrapper
+							// у селектов в конейнере для добавление не должно быть класса .js-select
+							select.input-main(name='Category', 
+														id='Category',
+														data-validation='length', 
+														data-validation-length='min1',
+														data-validation-event="change",
+														data-placeholder='Разъёмы электропитания',
+														data-trigger='otherQuestions',data-trigger-value='5')
+								option(value="1") Co-location
+								option(value="2") Выделенные сервера
+								option(value="3") Категория 3
+								option(value="4") IaaS
+								option(value="5") Другое
+					.input-item.w100
+						.input-wrapper
+							textarea.input-main.disabled-field(
+								type="text",
+								rows="4",
+								disabled='true',
+								data-validation="length",
+								data-validation-length="50-200",
+								data-target='otherQuestions')
+							label.input-label Вопрос *
+				/// конец блок 1
+				/// блок 2
+				.input-row(data-display-target='theme-question',data-display-trigger-value='2')
+					.text-small Другой текс, которого может быть, а может не быть
+						strong меняется, 
+						| чтобы уточнить требования по телефону
+					hr.form-content-devider
+					.input-item.w100
+						.input-wrapper
+							textarea.input-main(
+								type="text",
+								rows="4")
+							label.input-label Вопрос *
+				/// конец блок 2
+				.input-row(data-display-target='theme-question',data-display-trigger-value='3')
+					.input-item.w100
+						.input-wrapper
+							select.input-main(name='Category', 
+														id='Category',
+														data-validation='length', 
+														data-validation-length='min1',
+														data-validation-event="change",
+														data-placeholder='Разъёмы электропитания')
+								option(value="1") Критический
+								option(value="2") Высокий
+								option(value="3",selected) Обычный	
 .modal-layout(data-modal='get-consultation').js-popup-container
 	.modal-container.consultation-modal
 		.modal-container-inner
@@ -284,7 +295,8 @@ include _mixins.pug
 										input.radio-input(
 											type="radio", 
 											name="radio-group", 
-											id="radio-4")
+											id="radio-4",
+											data-display-trigger='Call-type')
 										label.radio-label(for="radio-4")
 											.radio-label__custom
 												.radio-label__check
@@ -377,4 +389,4 @@ include _mixins.pug
 						button.button-submit.disabled-field(
 						type="submit",
 						data-target="btn-submit",
-						value="Отправить") Отправить
+						value="Отправить") Отправит
