--- a/src/sass/_modal.sass
+++ b/src/sass/_modal.sass
@@ -92,7 +92,8 @@
 
 .application-modal
 	width: 100%
-	height: 100%
+	height: auto
+	min-height: 100%
 	padding: 20px 70px 70px 80px
 	max-width: 873px
 	background-color: #ffffff
